--- a/products.html
+++ b/products.html
@@ -178,7 +178,7 @@ h3 {
         <!-- Milk -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/istockphoto-2158429945-2048x2048.jpg" alt="Milk">
+                <img src="images\istockphoto-2158429945-2048x2048.jpg" alt="Milk">
                 <h5>Milk</h5>
                 <p>₹50 / Liter</p>
             </div>
@@ -187,7 +187,7 @@ h3 {
         <!-- Curd -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Curd.jpg" alt="Curd">
+                <img src="images\Curd.jpg" alt="Curd">
                 <h5>Curd / Yogurt</h5>
                 <p>₹60 / Kg</p>
             </div>
@@ -390,6 +390,7 @@ h3 {
       <p>📍 14 Green Valley, Near Toll Naka, Neri, Jamner,Jalgaon, MH, India</p>
       <p>📞 +91‑9876543210</p>
       <p>✉️ info@greenvalleydairy.com</p>
+      <p>@Jayant Patil</p>
     </div>
 
   </div>
