--- a/about.html
+++ b/about.html
@@ -257,7 +257,7 @@ footer {
 
 <!-- HERO SECTION -->
 <div class="hero">
-    <img src="/images/cow2.avif" alt="Green Valley Dairy">
+    <img src="images/cow2.avif" alt="Green Valley Dairy">
     <div class="hero-content">
         <h3 style="color: #1E3A8A;">About Green Valley Dairy</h3>
         <p>
@@ -336,6 +336,7 @@ footer {
       <p>📍 14 Green Valley, Near Toll Naka, Neri, Jamner,Jalgaon, MH, India</p>
       <p>📞 +91‑9876543210</p>
       <p>✉️ info@greenvalleydairy.com</p>
+      <p>@Jayant Patil</p>
     </div>
 
   </div>
