--- a/products.html
+++ b/products.html
@@ -178,7 +178,7 @@ h3 {
         <!-- Milk -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="images\istockphoto-2158429945-2048x2048.jpg" alt="Milk">
+                <img src="images/istockphoto-2158429945-2048x2048.jpg" alt="Milk">
                 <h5>Milk</h5>
                 <p>₹50 / Liter</p>
             </div>
@@ -187,7 +187,7 @@ h3 {
         <!-- Curd -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="images\Curd.jpg" alt="Curd">
+                <img src="images/Curd.jpg" alt="Curd">
                 <h5>Curd / Yogurt</h5>
                 <p>₹60 / Kg</p>
             </div>
@@ -196,7 +196,7 @@ h3 {
         <!-- Butter -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Butter.jpg" alt="Butter">
+                <img src="images/Butter.jpg" alt="Butter">
                 <h5>Butter</h5>
                 <p>₹220 / Kg</p>
             </div>
@@ -205,7 +205,7 @@ h3 {
         <!-- Ghee -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Ghee.jpg" alt="Ghee">
+                <img src="images/Ghee.jpg" alt="Ghee">
                 <h5>Ghee</h5>
                 <p>₹600 / Kg</p>
             </div>
@@ -214,7 +214,7 @@ h3 {
         <!-- Cheese -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Cheese.jpg" alt="Cheese">
+                <img src="images/Cheese.jpg" alt="Cheese">
                 <h5>Cheese</h5>
                 <p>₹350 / Kg</p>
             </div>
@@ -223,7 +223,7 @@ h3 {
         <!-- Paneer -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/paneer.webp" alt="Paneer">
+                <img src="images/paneer.webp" alt="Paneer">
                 <h5>Paneer</h5>
                 <p>₹300 / Kg</p>
             </div>
@@ -232,7 +232,7 @@ h3 {
         <!-- Cream -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Cream.jpg" alt="Cream">
+                <img src="images/Cream.jpg" alt="Cream">
                 <h5>Cream</h5>
                 <p>₹180 / Liter</p>
             </div>
@@ -241,7 +241,7 @@ h3 {
         <!-- Buttermilk -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Butter Milk.jpg" alt="Buttermilk">
+                <img src="images/Butter Milk.jpg" alt="Buttermilk">
                 <h5>Buttermilk</h5>
                 <p>₹30 / Glass</p>
             </div>
@@ -250,7 +250,7 @@ h3 {
         <!-- Ice Cream -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Ice Cream.jpg" alt="Ice Cream">
+                <img src="images/Ice Cream.jpg" alt="Ice Cream">
                 <h5>Ice Cream</h5>
                 <p>₹120 / Cup</p>
             </div>
@@ -259,7 +259,7 @@ h3 {
         <!-- Milk Powder -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Milk powder.jpg" alt="Milk Powder">
+                <img src="images/Milk powder.jpg" alt="Milk Powder">
                 <h5>Milk Powder</h5>
                 <p>₹450 / Kg</p>
             </div>
@@ -268,7 +268,7 @@ h3 {
         <!-- Condensed Milk -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Condensed Milk.jpg" alt="Condensed Milk">
+                <img src="images/Condensed Milk.jpg" alt="Condensed Milk">
                 <h5>Condensed Milk</h5>
                 <p>₹200 / Tin</p>
             </div>
@@ -277,7 +277,7 @@ h3 {
         <!-- Flavored Milk -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Flavored Milk.jpg" alt="Flavored Milk">
+                <img src="images/Flavored Milk.jpg" alt="Flavored Milk">
                 <h5>Flavored Milk</h5>
                 <p>₹40 / Bottle</p>
             </div>
@@ -286,7 +286,7 @@ h3 {
         <!-- Koya / Mawa -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Koya.jpg" alt="Koya">
+                <img src="images/Koya.jpg" alt="Koya">
                 <h5>Koya / Mawa</h5>
                 <p>₹280 / Kg</p>
             </div>
@@ -295,7 +295,7 @@ h3 {
         <!-- Shrikhand -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Shrikhand.jpg" alt="Shrikhand">
+                <img src="images/Shrikhand.jpg" alt="Shrikhand">
                 <h5>Shrikhand</h5>
                 <p>₹160 / Cup</p>
             </div>
@@ -304,7 +304,7 @@ h3 {
         <!-- Basundi -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Basundi.jpg" alt="Basundi">
+                <img src="images/Basundi.jpg" alt="Basundi">
                 <h5>Basundi</h5>
                 <p>₹140 / Cup</p>
             </div>
@@ -313,7 +313,7 @@ h3 {
         <!-- Lassi -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Lassi.jpg" alt="Lassi">
+                <img src="images/Lassi.jpg" alt="Lassi">
                 <h5>Lassi</h5>
                 <p>₹50 / Glass</p>
             </div>
@@ -322,7 +322,7 @@ h3 {
         <!-- Rabri -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Rabri.jpg" alt="Rabri">
+                <img src="images/Rabri.jpg" alt="Rabri">
                 <h5>Rabri</h5>
                 <p>₹180 / Cup</p>
             </div>
@@ -331,7 +331,7 @@ h3 {
         <!-- Pedha -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Pedha.jpg" alt="Pedha">
+                <img src="images/Pedha.jpg" alt="Pedha">
                 <h5>Pedha</h5>
                 <p>₹400 / Kg</p>
             </div>
@@ -340,7 +340,7 @@ h3 {
         <!-- Barfi -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Barfi.jpg" alt="Barfi">
+                <img src="images/Barfi.jpg" alt="Barfi">
                 <h5>Barfi</h5>
                 <p>₹420 / Kg</p>
             </div>
@@ -349,7 +349,7 @@ h3 {
         <!-- Rasulla -->
         <div class="col-md-3 col-sm-6">
             <div class="product-card">
-                <img src="/images/Rasulla.jpg" alt="Rasulla">
+                <img src="images/Rasulla.jpg" alt="Rasulla">
                 <h5>Rasulla</h5>
                 <p>₹380 / Kg</p>
             </div>
