And Few Feature

--- a/contact.html
+++ b/contact.html
@@ -236,6 +236,7 @@
         <p>📍 Near Toll Naka Neri,Jamner,Jalgaon,MH,INdia</p>
         <p>📞 +91 98765 43210</p>
         <p>📧 info@greenvalleydairy.com</p>
+        <p>@Jayant Patil</p>
     </div>
 </div>
 
