--- a/only_farmer_data.html
+++ b/only_farmer_data.html
@@ -182,6 +182,7 @@ body {
       <p>📍 14 Green Valley, Near Toll Naka, Neri, Jamner,Jalgaon, MH, India</p>
       <p>📞 +91‑9876543210</p>
       <p>✉️ info@greenvalleydairy.com</p>
+      <p>@Jayant Patil</p>
     </div>
 
   </div>
