--- a/farmers.html
+++ b/farmers.html
@@ -307,6 +307,7 @@ button:hover {
       <p>📍 14 Green Valley, Near Toll Naka, Neri, Jamner,Jalgaon, MH, India</p>
       <p>📞 +91‑9876543210</p>
       <p>✉️ info@greenvalleydairy.com</p>
+      <p>@Jayant Patil</p>
     </div>
 
   </div>
