--- a/delivery.html
+++ b/delivery.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home Delivery</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 <style>
     body {
         background-color: #e6f0ff70;
@@ -135,6 +138,23 @@
     font-size: 0.9rem;
     color: #E5E7EB;
 }
+.social-icons {
+    display: flex;
+    gap: 15px;
+    margin-top: 15px;
+}
+
+.social-icons a {
+    color: #D1D5DB;
+    font-size: 1.4rem;
+    transition: transform 0.3s, color 0.3s;
+}
+
+.social-icons a:hover {
+    color: #ffffff;
+    transform: scale(1.2);
+}
+
 </style>
 </head>
 <body>
@@ -319,14 +339,38 @@
 <footer class="site-footer">
   <div class="footer-container">
 
-    <!-- About & Description -->
+    <!-- About -->
     <div class="footer-section about">
       <h4>About Green Valley Dairy</h4>
       <p>
-        Green Valley Dairy provides high‑quality fresh dairy products sourced
+        Green Valley Dairy provides high-quality fresh dairy products sourced
         directly from local farms. We’re committed to nutrition, sustainability,
         and community support.
       </p>
+
+      <!-- Social Media -->
+      <div class="social-icons">
+  <a href="https://www.facebook.com/" target="_blank" title="Facebook">
+    <i class="fab fa-facebook"></i>
+  </a>
+
+  <a href="https://www.instagram.com/" target="_blank" title="Instagram">
+    <i class="fab fa-instagram"></i>
+  </a>
+
+  <a href="https://twitter.com/" target="_blank" title="Twitter / X">
+    <i class="fab fa-x-twitter"></i>
+  </a>
+
+  <a href="https://wa.me/919876543210" target="_blank" title="WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+
+  <a href="https://www.youtube.com/" target="_blank" title="YouTube">
+    <i class="fab fa-youtube"></i>
+  </a>
+</div>
+
     </div>
 
     <!-- Quick Links -->
@@ -341,22 +385,22 @@
       </ul>
     </div>
 
-     <!-- Contact Info -->
+    <!-- Contact Info -->
     <div class="footer-section contact-info">
       <h4>Contact Information</h4>
-      <p>📍 14 Green Valley, Near Toll Naka, Neri, Jamner,Jalgaon, MH, India</p>
-      <p>📞 +91‑9876543210</p>
+      <p>📍 14 Green Valley, Near Toll Naka, Neri, Jamner, Jalgaon, MH, India</p>
+      <p>📞 +91-9876543210</p>
       <p>✉️ info@greenvalleydairy.com</p>
       <p>@Jayant Patil</p>
     </div>
 
   </div>
 
-  <!-- Bottom line -->
   <div class="footer-bottom">
     <p>© 2026 Green Valley Dairy. All Rights Reserved.</p>
   </div>
 </footer>
+
 
 <script>
 // UPI Payment Methods
