--- a/logout.html
+++ b/logout.html
@@ -52,6 +52,22 @@ p {
     background: #a0128f;
     color: #fff;
 }
+.social-icons {
+    display: flex;
+    gap: 15px;
+    margin-top: 15px;
+}
+
+.social-icons a {
+    color: #D1D5DB;
+    font-size: 1.4rem;
+    transition: transform 0.3s, color 0.3s;
+}
+
+.social-icons a:hover {
+    color: #ffffff;
+    transform: scale(1.2);
+}
 </style>
 </head>
 <body>
