--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-/* 🌄 BACKGROUND */
+/*  BACKGROUND */
 body {
     min-height: 100vh;
     margin: 0;
